2004-10-24 01:13 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GNUmakefile.preamble
	* Palettes/1Windows/GNUmakefile.preamble
	* Palettes/2Controls/GNUmakefile.preamble
	* Palettes/3Containers/GNUmakefile.preamble
	* Palettes/4Data/GNUmakefile.preamble: Removed extra slash for
	compilation under MinGW on win32.
	
2004-10-23 20:16 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormLib/GNUmakefile.postamble: Changed the build process a little
	to be more compatible with MinGW on win32.
	
2004-10-17 12:51 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormControlEditor.m: Added necessary methods for dragging
	of the formatter to the view.
	* GormInternalViewEditor.m: Changed initWithObject:inDocument:
	so that the view doesn't attempt to accept an IBFormatterPboardType
	object from the drag when it shouldn't.
	* GormViewEditor.m: Made similar changes here.
	* Palettes/4Data/inspectors.m: Removed hard coded implementations
	of tables.  Added code to blank inspector when the formatter is
	detached.
	* Palette/4Data/GormNSDateFormatterInspector.gorm: Updated with
	new table.
	* Palette/4Data/GormNSNumberFormatterInspector.gorm: Updated with
	new table.
	
2004-10-03 12:51 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormMatrixEditor.m: Added performDragOperation implementation
	to allow the drag and drop of sound/images to a matrix cell.
	* GormPrivate.h: Moved a category which defines a method called
	on setArchiveByName to this header so it's useful to more than
	just the editors.
	* GormViewEditor.m: Removed category declaration.
	* Palettes/2Controls/GormButtonEditor.m: Removed some old,
	commented out code.
	
2004-10-02 13:08 Gregory John Casamento <greg_casamento@yahoo.com>

	* Resources/GormDocument.gorm: Changed the spacing of the
	file view so that the text fields don't get cut off.
	
2004-10-02 01:15 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormNSMenu.m: Modified 